--- a/css/style.css
+++ b/css/style.css
@@ -340,7 +340,7 @@ header {
     position: relative;
     display: flex;
     flex-direction: column;
-    margin-top: 7vw;  
+    margin-top: 7vh;  
 }
 
 .imagem_modelo {
