--- a/css/style.css
+++ b/css/style.css
@@ -8,45 +8,37 @@
 
 html {
     font-family: 'Poppins', sans-serif;
-    /* Torna suave o movimento do scroll */
     scroll-behavior: smooth;
 }
 
-/* Inicio da Configuração Swipper */
 .swiper {
+    position: relative;
+    width: 90%;
+    height: 50vh;
+    margin: 5vh auto;
+  }
+
+.swiper-slide {
     display: flex;
-    align-items: center;
     justify-content: center;
-    margin-top: 50px;
-    width: 70%; /* Ajusta para ocupar toda a largura */
-    height: 380px;
-    position: relative; /* Importante para posicionar as setas */
-    
 }
 
 .custom-button-prev, .custom-button-next {
     position: absolute;
-    top: 60%;
-    transform: translateY(-50%);
+    top: 50%;
     cursor: pointer;
     z-index: 1;
 }
-
+  
 .custom-button-prev {
-    left: 180px; 
+    left: 20vh;
 }
-
+  
 .custom-button-next {
-    right: 250px; 
-}
-
-.custom-button-prev img, .custom-button-next img {
-    width: 40px; 
-    height: auto;
+    right: 20vh;
 }
 
 /* Fim da Configuração Swipper */
-
 
 /* Inicio do Header */
 
@@ -110,6 +102,7 @@ header {
 
 /* container ao apertar todas as categorias */
 .container_busca_produto {
+    position: relative;
     z-index: 1;
     display: flex;
     align-items: center;
@@ -203,41 +196,57 @@ header {
 .container_listas {
     position: relative;
     height: 42vh;
-    width: 150vh;
+    width: 155vh;
     display: flex;
-    justify-content: space-between;
-    gap: 160px;
 }
 
 .lista_categoria {
     position: absolute;
-    top: 40px;
-    left: 0;
+    left: 10vw;
     background-color: #ffffff;
     border-radius: 5px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-
-.container_listas .lista_departamentos:first-child {
+.lista_departamentos:first-child {
+    position: relative;
     background-color: #F5F5F5;
-    width: 200px;
+    width: 30vh;
+    text-align: left;  
+    max-height: 100%; 
+    overflow-y: auto;  
+    padding: 0;
+    margin: 0;
+    list-style: none; 
+}
+
+.lista_departamentos span:first-child {
+    position: absolute;
+    left: 25vh;
+    font-weight: bold;
+    font-size: 1.2em;
+
+    
 }
 
 .lista_departamentos {
     display: flex;
-    gap: 50px;
+    gap: 10vh;
 }
 
 .lista_departamentos ul {
     list-style: none;
 }
 
+.lista_departamentos li:hover {
+    color: #005CFF;
+    cursor: pointer;
+}
+
 .lista_departamentos li {
-    font-size: 14px;
+    font-size: 1em;
     color: #000000;
     padding: 5px;
-   
 }
 
 .container_listas .texto_lista {
@@ -247,32 +256,30 @@ header {
 .container_da_foto_card {
     position: relative;
     display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .foto_card img {
     border-radius: 10px;
     height: 40vh;
     filter: brightness(80%); 
-    margin-right: 30vh; 
+    margin-left: 20vh;
 }
 
 .container_texto_card  {
-    left: 20px;
-    top: 5vh;
+    left: 25vh;
+    top: 4vh;
     position: absolute;
     color: #f8fbff;
-    font-size: 25px;
+    font-size: 1.8em;
     justify-content: end;
     text-align:left;
-    width: 120px;
+    width: 20vh;
 }
 
 .container_da_foto_card button {
     position: absolute;
     top: 32vh;
-    left: 3vh;
+    left: 25vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -291,6 +298,7 @@ header {
     background-color: #ffffff;
     color: #020202;
 }
+
 /* Fim das configurações de HTML no javascript no lista_categoria*/
 
 /* Fim do Header */
@@ -304,11 +312,13 @@ header {
     justify-content: center;
     background-color: #E6E7E9;
     width: 100%;
+    height: 80vh;
 }
 
 .container_oferta img {
     display: flex;
-    height: 31.5vw;
+    height: 60vh;
+    margin-top: 20vh;
 }
 
 .titulo_oferta {
@@ -336,23 +346,26 @@ header {
 
 /* Inicio da Section container_lancamento*/
 
+.container_lancamento > h3 {
+    display: flex;
+    font-size: 2rem;
+    margin-left: 20vh; 
+}
+
 .container_lancamento {
     position: relative;
+    margin-top: 10vh;  
+}
+
+.card-group {
     display: flex;
-    flex-direction: column;
-    margin-top: 7vh;  
+    align-items: center;
+    justify-content: center;
+    gap: 3vh; 
 }
 
 .imagem_modelo {
-    width: 20vh;
-}
-
-.container_lancamento > h3 {
-    position: absolute;
-    display: flex;
-    font-size: 2rem;
-    left: 15vw;
-    top: -1vw;
+    height: 50%;
 }
 
 .container_card {
@@ -398,8 +411,8 @@ header {
     background-color: #0a4ab1;
 }
 
-.container_card > a {
-    position: relative;
+.container_promo > a {
+    position: absolute;
     display: flex;
     background-color: #5EC0BE;
     width: 8vh;
@@ -407,9 +420,7 @@ header {
     text-align: center;
     align-items: center;
     justify-content: center;
-    bottom: 6vh;
-    left: 3vh;
-    font-size: 0.8em;
+    left: 12vh;
     border-radius: 5px;
 }
 
@@ -486,7 +497,6 @@ header {
     gap: 2vw;
     display: flex;
     width: 38vw;
-    
 }
 
 .container_icone {
@@ -577,13 +587,12 @@ header {
 }
 
 .container_registrar h3 {
-    font-size: 2rem;
+    font-size: 2em;
 }
 
 .container_registrar strong {
     color: #005CFF;
 }
-
 
 .container_formulario {
     position: relative;
@@ -607,7 +616,7 @@ header {
 }
 
 .container_conteudo span {
-    font-size: 1.2vw;
+    font-size: 1.2em;
 }
 
 .form {
@@ -715,17 +724,14 @@ footer {
 
 /* Fim do Footer */
 
-/* Fim das configurações de HTML no javascript no lista_categoria*/
-
 /* Responsividade (Mobile) */
 @media (max-width: 768px) {
 
 /* Inicio da Configuração Swaiper*/
 
 .swiper {
-    width: 80%; 
-    height: 380px;
-    
+    width: 25vh; 
+    height: 50vh;
 }
 
 .custom-button-prev, .custom-button-next {
@@ -733,11 +739,11 @@ footer {
 }
 
 .custom-button-prev {
-    left: 10px;  
+    left: 4vh;  
 }
 
 .custom-button-next {
-    right: 20px; 
+    right: 4vh; 
 }
 
 .custom-button-prev img, .custom-button-next img {
@@ -946,9 +952,12 @@ footer {
 /* Inicio da Section container_lancamento*/
 
     .container_lancamento > h3 {
-        font-size: 1.5em;
-        margin-top: 3vw;
-        left: 5vw;
+        font-size: 1.3em;
+        margin-left: 15vh
+    }
+
+    .container_card:nth-child(n+2) {
+        display: none;
     }
 /* Fim da Section container_lancamento*/
 
