--- a/css/style.css
+++ b/css/style.css
@@ -194,14 +194,13 @@ header {
 /* Inicio das configurações de HTML no javascript no lista_categoria*/
 .container_listas {
     position: relative;
-    height: 42vh;
-    width: 155vh;
+    height: 350px;
+    width: 1200px;
     display: flex;
 }
 
 .lista_categoria {
     position: absolute;
-    left: 10vw;
     background-color: #ffffff;
     border-radius: 5px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -210,8 +209,7 @@ header {
 .lista_departamentos:first-child {
     position: relative;
     background-color: #F5F5F5;
-    width: 30vh;
-    text-align: left;  
+    width: 280px;
     max-height: 100%; 
     overflow-y: auto;  
     padding: 0;
@@ -221,16 +219,14 @@ header {
 
 .lista_departamentos span:first-child {
     position: absolute;
-    left: 25vh;
+    left: 230px;
     font-weight: bold;
     font-size: 1.2em;
-
-    
 }
 
 .lista_departamentos {
     display: flex;
-    gap: 10vh;
+    gap: 80px;
 }
 
 .lista_departamentos ul {
@@ -259,26 +255,26 @@ header {
 
 .foto_card img {
     border-radius: 10px;
-    height: 40vh;
+    height: 300px;
     filter: brightness(80%); 
-    margin-left: 20vh;
+    margin-left: 150px;
 }
 
 .container_texto_card  {
-    left: 25vh;
-    top: 4vh;
+    left: 180px;
+    top: 20px;
     position: absolute;
     color: #f8fbff;
     font-size: 1.8em;
     justify-content: end;
     text-align:left;
-    width: 20vh;
+    width: 130px;
 }
 
 .container_da_foto_card button {
     position: absolute;
-    top: 32vh;
-    left: 25vh;
+    top: 250px;
+    left: 190px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -864,59 +860,6 @@ footer {
         position: absolute;
         background-color: #005CFF;
     }
-
-    /* Fim Offcanvas */
-
-    /* Inicio das configurações de HTML no javascript no lista_categoria(Responsivo)*/
-    .lista_categoria {
-        top: 30px;
-        left: -30px; 
-        height: 150px;
-    }
-    
-    .container_listas { 
-        display: flex;
-        justify-content: space-between;
-        gap: 5px;
-    }
-    
-    .container_listas .lista_departamentos:first-child {
-        justify-content: end;
-        width: 80px;
-        height: 150px;
-    }
-
-    .lista_departamentos {
-        gap: 30px;
-    }
-
-    .lista_departamentos li {
-        font-size: 0.7rem;
-        
-    }
-
-    .lista_departamentos ul:nth-child(n+3){
-        display: none;
-    }
-
-    .foto_card img {
-        height: 140px;
-        width: 90px;
-    }
-
-    .container_texto_card  {
-        font-size: 1.5vh;
-        width: 100px;
-        left: 1px;
-    }
-    
-    .container_da_foto_card button {
-        font-size: 1.5vh;
-        font-weight: 400;
-        height: 20px;
-        width: 70px;
-    }
-    /* Fim das configurações de HTML no javascript no lista_categoria(Responsivo)*/
 
 /* Fim do Header */
 
