--- a/css/style.css
+++ b/css/style.css
@@ -278,9 +278,9 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 15px;
+    font-size: 1em;
     color: #F5F5F5;
-    font-weight: 900;
+    font-weight: 600;
     border-color: #F5F5F5;
     border-width: 1px;
     border-radius: 8px;
