--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,8 @@ header {
     display: flex;
     width: 100%;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
+    gap: 300px;
 }
 
 .container_barra_pesquisa > input {
@@ -92,12 +93,12 @@ header {
 .container_barra_pesquisa {
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 80px;
     
 }
 
 .container_barra_pesquisa > img {
-    height: 1.5vw;
+    height: 30px;
 }
 
 /* container ao apertar todas as categorias */
@@ -108,7 +109,7 @@ header {
     align-items: center;
     justify-content: center;
     top: 110px;
-    left: 370px;
+    left: 390px;
     position: absolute;
     background: #ffffff;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -328,12 +329,12 @@ header {
 }
 
 .titulo_oferta > span {
-    font-size: 4em;
+    font-size: 6em;
     color: #020202;
 }
 
 .titulo_oferta > h3 {
-    font-size: 1.5em;
+    font-size: 2em;
     width: 30vw;
     color: #005CFF;
 }
@@ -886,6 +887,12 @@ footer {
 
 /* Inicio da Section container_lancamento*/
 
+    .container_barra_pesquisa {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        
+    }
     .container_lancamento > h3 {
         font-size: 2em;
         margin-left: 90px;
