--- a/css/style.css
+++ b/css/style.css
@@ -341,18 +341,28 @@ header {
     align-items: center;
     justify-content: center;
     text-align: center;
-    flex-direction: column;
-    
+    flex-direction: column;  
 }
 
-.titulo_oferta > span {
-    font-size: 6em;
-    color: #020202;
+.container_titulo_sale strong {
+    font-size: 6.2em;
+    font-weight: 700;
 }
 
-.titulo_oferta > h3 {
-    font-size: 2em;
-    width: 500px;
+.container_titulo_sale span {
+    font-size: 6.2em;
+    font-weight: 200;
+}
+
+.titulo_oferta h3 {
+    font-size: 1.5em;
+    color: #005CFF;
+    font-weight: 600;
+}
+
+.titulo_oferta h4 {
+    font-size: 3.7em;
+    font-weight: 700;
     color: #005CFF;
 }
 
@@ -463,6 +473,7 @@ header {
     align-items: center;
     justify-content: center;
     font-size: 0.8em;
+    font-weight: 700;
     position: absolute;
     left: 10px;
     top: 20px;
@@ -915,25 +926,37 @@ footer {
 }
 
 .container_oferta {
-    height: 455px;
+    height: 453px;
 }
 
 .titulo_oferta {
     position: absolute;
-    right: 10px;
+    right: 4px;
     top: 80px;
+
 }
 
-.titulo_oferta > span {
+.container_titulo_sale {
+    width: 200px;
+}
+
+.container_titulo_sale strong {
+    font-size: 2.5em;
+} 
+
+.container_titulo_sale span {
+    font-size: 2.5em; 
+}
+
+.titulo_oferta h3 {
+    font-size: 0.7em;
+    color: #005CFF;
+}
+
+.titulo_oferta h4 {
     font-size: 2em;
-    color: #020202;
-}
+} 
 
-.titulo_oferta > h3 {
-    width: 180px;
-    font-size: 1.4em;
-    
-}
 /* Inicio da Section Container Oferta */
 
 /* Inicio da Section container_lancamento*/
